<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_message_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.research.andrade.andar.MessageContact"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:text="My Coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:layout_margin="10dp"
        android:padding="8dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:text="Latitude: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt"
            android:layout_marginLeft="5dp"
            android:textStyle="normal|bold"
            android:padding="8dp" />

        <TextView
            android:text=" ? "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtLat"
            android:layout_marginLeft="5dp"
            android:padding="8dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:text="Longitude: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt1"
            android:layout_marginLeft="5dp"
            android:textStyle="normal|bold"
            android:padding="8dp" />


        <TextView
        android:text=" ? "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtLong"
        android:layout_marginLeft="5dp"
            android:padding="8dp" />

    </LinearLayout>

            <Button
        android:text="GET COORDINATES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFetch"
        android:layout_margin="10dp"
        android:padding="8dp"
                android:layout_gravity="center" />

            <TextView
                android:text="Select Message :"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:padding="8dp"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RadioButton
            android:text="@string/Immediately"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdoImmediately"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/holo_red_dark" />

        <RadioButton
            android:text="@string/Possible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdoPossible"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/holo_orange_dark"
             />

        <RadioButton
            android:text="@string/Okay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdoOkay"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/holo_green_dark"
             />
    </RadioGroup>

    <Button
        android:text="Send Message To Emergency Contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSend"
        android:layout_margin="10dp"
        android:padding="8dp"
        android:layout_gravity="center" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>
